examples/inventory-route-path.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: inventory
spec:
  parentRefs:
  - name: my-hotel
    sectionName: http 
  rules:
  - backendRefs:  
    - name: inventory-ver1
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /ver1
  - backendRefs:  
    - name: inventory-ver2
      kind: ServiceImport
    matches:
    - path:
        type: PathPrefix
        value: /ver2
